--- a/src/assets/scss/_lists.scss
+++ b/src/assets/scss/_lists.scss
@@ -15,7 +15,6 @@
         display: block;
         width: var(--size);
         height: var(--size);
-        background-color: color("grey");
         position: absolute;
         top: 50%;
         left: 0;
@@ -23,6 +22,26 @@
       }
       & + .security-list__item__paragraph {
         margin-top: 12px;
+      }
+      &.eletronica {
+        &::before {
+          background: url("../images/seg-eletronica.svg") no-repeat;
+        }
+      }
+      &.patrimonial {
+        &::before {
+          background: url("../images/seg-patrimonial.svg") no-repeat;
+        }
+      }
+      &.armada {
+        &::before {
+          background: url("../images/seg-armada.svg") no-repeat;
+        }
+      }
+      &.privada {
+        &::before {
+          background: url("../images/seg-privada.svg") no-repeat;
+        }
       }
     }
     &__paragraph {
@@ -39,7 +58,7 @@
   padding-left: 28px;
   margin: 0;
   margin-top: 20px;
-  list-style-image: url("../images/chevron-circle-right-solid.svg");
+  list-style-image: url("../images/li.svg");
   &__item {
     line-height: 22px;
   }
