--- a/src/assets/scss/_lists.scss
+++ b/src/assets/scss/_lists.scss
@@ -57,7 +57,7 @@
   padding: 0;
   padding-left: 28px;
   margin: 0;
-  margin-top: 20px;
+  margin-top: 12px !important;
   list-style-image: url("../images/li.svg");
   &__item {
     line-height: 22px;
